--- a/images.html
+++ b/images.html
@@ -8,8 +8,8 @@
   <body>
     <div class="header">
       <div class="header-links">
-        <a href="index.html">Koogle Search</a>
-        <a href="advanced.html">koogle Advanced Search</a>
+        <a href="index.html">Google Search</a>
+        <a href="advanced.html">Google Advanced Search</a>
       </div>
     </div>
     <div class="search-container">
