--- a/images.html
+++ b/images.html
@@ -44,5 +44,6 @@
         <input type="hidden" name="tbm" value="isch" />
       </form>
     </div>
+    <input class="btn" type="submit" value="Google Image Search">
   </body>
 </html>
